--- a/Yui/phone.html
+++ b/Yui/phone.html
@@ -28,8 +28,8 @@
             width: 100%;
             min-height: 100vh;
             display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            grid-template-rows: auto auto auto auto;
+            grid-template-columns: 1fr 1fr 1fr; /* 桌面版：3 欄 */
+            grid-template-rows: auto auto auto auto auto; /* 預留足夠的行數 */
             grid-gap: 10px;
             padding: 10px;
             box-sizing: border-box;
@@ -62,15 +62,6 @@
             flex-wrap: wrap;
             gap: 15px; /* 按鈕之間的間距 */
             font-family: sans-serif;
-            /* 移除 justify-content: center; 因為父容器會處理對齊 */
-        }
-
-        .nl {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 15px;
-            font-family: sans-serif;
         }
 
         .nl a {
@@ -95,13 +86,13 @@
         }
 
         .bc {
-            grid-column: 1 / span 2;
-            grid-row: 1 / span 2;
+            grid-column: 1 / span 2; /* 橫跨第 1 到第 2 欄 */
+            grid-row: 1 / span 2; /* 橫跨第 1 到第 2 行 */
         }
 
         .sc {
-            grid-column: 3 / 4;
-            grid-row: 1 / 2;
+            grid-column: 3 / 4; /* 第 3 欄 */
+            grid-row: 1 / 2; /* 第 1 行 */
         }
 
         .sc a {
@@ -120,12 +111,23 @@
         }
 
         .sc2 {
-            grid-column: 3 / 4;
-            grid-row: 2 / 3;
+            grid-column: 3 / 4; /* 第 3 欄 */
+            grid-row: 2 / 3; /* 第 2 行 */
+        }
+
+        /* 新增的區塊樣式 */
+        .school-timetable {
+            grid-column: 3 / 4; /* 第 3 欄 */
+            grid-row: 3 / 4; /* 第 3 行 */
+        }
+
+        .lyrics-section {
+            grid-column: 3 / 4; /* 第 3 欄 */
+            grid-row: 4 / 5; /* 第 4 行 */
         }
 
         .footer {
-            grid-column: 1 / 4;
+            grid-column: 1 / 4; /* 橫跨所有欄 */
             text-align: center;
             background-color: #eee;
         }
@@ -134,7 +136,7 @@
             width: 100%;
             height: auto;
             display: block;
-            border-radius: 10px;
+            border-radius: 10px; /* optional 圓角 */
         }
 
         .profile-text {
@@ -160,6 +162,7 @@
             text-decoration: none;
             border-radius: 10px;
             transition: background-color 0.3s;
+            border: none; /* 確保按鈕本身沒有額外的邊框 */
         }
 
         .btn-group2 a:hover {
@@ -191,11 +194,91 @@
             border-radius: 10px; /* optional 圓角 */
         }
 
+        /* ******************************************* */
+        /* 手機優化 (Mobile Optimization) Media Queries */
+        /* ******************************************* */
+
+        @media (max-width: 768px) { /* 當螢幕寬度小於或等於 768px 時應用 */
+            .header-container {
+                flex-direction: column; /* 標題和導覽列堆疊顯示 */
+                align-items: center; /* 內容居中 */
+                padding: 15px 5px; /* 調整內距 */
+            }
+
+            .site-title {
+                font-size: 28px; /* 標題字體縮小 */
+                margin-bottom: 10px; /* 標題下方增加間距 */
+            }
+
+            .nl {
+                gap: 10px; /* 按鈕間距縮小 */
+                justify-content: center; /* 按鈕居中顯示 */
+            }
+
+            .nl a {
+                font-size: 14px; /* 導覽按鈕字體縮小 */
+                padding: 6px 12px; /* 導覽按鈕內距縮小 */
+            }
+
+            .container {
+                grid-template-columns: 1fr; /* 桌面版：1 欄 (所有區塊垂直堆疊) */
+                grid-template-rows: auto; /* 行高自動調整 */
+                padding: 5px; /* 容器內距縮小 */
+            }
+
+            .container div {
+                padding: 10px; /* 區塊內距縮小 */
+            }
+
+            .bc, .sc, .sc2, .school-timetable, .lyrics-section, .footer {
+                grid-column: 1 / 1; /* 所有區塊都佔據單欄 */
+                grid-row: auto; /* 行自動排列 */
+            }
+
+            h3 {
+                font-size: 20px; /* 小標題字體縮小 */
+            }
+
+            .important {
+                font-size: 16px; /* 重要文字字體縮小 */
+            }
+
+            .btn-group2 a {
+                font-size: 14px; /* 按鈕字體縮小 */
+                padding: 6px 14px; /* 按鈕內距縮小 */
+            }
+
+            table {
+                font-size: 14px; /* 表格字體縮小 */
+            }
+
+            td {
+                padding: 6px; /* 表格儲存格內距縮小 */
+            }
+
+            #end, #wa {
+                font-size: 12px; /* 頁腳文字字體縮小 */
+            }
+        }
+
+        /* 再次確保 .btn-group2 及其內部元素沒有邊框和不必要的背景/內距 */
+        /* 這邊寫在 Media Query 外，以確保它對所有尺寸都生效，並能覆蓋 .container div 的通用規則 */
+        .btn-group2 {
+            border: none !important; /* 移除 btn-group2 自身的邊框 */
+            padding: 0 !important; /* 移除 btn-group2 自身的內距 */
+            background-color: transparent !important; /* 確保背景是透明的 */
+        }
+
+        .btn-group2 p {
+            margin: 0 !important; /* 移除 <p> 標籤預設的上下邊距 */
+            padding: 0 !important; /* 移除 <p> 標籤預設的內距 */
+            border: none !important; /* 確保 <p> 標籤沒有邊框 */
+            background-color: transparent !important; /* 確保背景是透明的 */
+        }
     </style>
 </head>
 <body>
 
-    <!-- 保留原本顯示方式的 Header + Banner -->
     <div class="header-container">
         <div class="site-title">Weiyu｜<span style="font-size: 24px;">Official Site</span></div>
         <div class="nl">
@@ -203,12 +286,11 @@
             <a href="sc.html">Schedule</a>
             <a href="Lyrics.html">Music</a>
             <a href="mailto:macadam_topspin.0d@icloud.com">Contact</a>
-            <a href="phone.html">Phone</a>
+            <a href="index.html">PC</a>
         </div>
     </div>
     <img src="Weiyu.jpg" class="banner" alt="Weiyu Banner">
 
-    <!-- 其餘內容採用新版排版風格 -->
     <div class="container">
         <div class="bc">
             <img src="Lan.webp" alt="Banner" class="banner">
@@ -220,12 +302,7 @@
                 <li>NICA</li>
                 <li>TKU DILS</li>
             </ul>
-            <h3 class="important">School timetable</h3>
-            <div class="btn-group2" style="border: none; padding: 0; background-color: transparent;">
-                <p><a class="important" href="sc.html" target="_blank">
-            このボタンをぽちってね～！そしたら、あのページに行けるよんっ</a></p>
             </div>
-        </div>
 
         <div class="sc">
             <h3>This month's favorite animation top5</h3>
@@ -243,23 +320,24 @@
         </div>
 
         <div class="sc2">
-            <!--<h3>Tags</h3>
-            <table>
-                <tr><td>Tag1</td><td>style</td></tr>
-                <tr><td>Tag2</td><td>hr</td></tr>
-                <tr><td>Tag3</td><td>br</td></tr>
-            </table>-->
             <h3>My favorite light novels and manga</h3>
             <table>
                 <tr><td><a href="https://roshidere.com" target="_blank">時々ボソッとロシア語でデレる隣のアーリャさん</a></td></tr>
                 <tr><td><a href="https://shonenjumpplus.com/episode/13933686331692600972" target="_blank">久保さんは僕を許さない</a></td></tr>
-                <!--<tr><td><a href="https://fantasiabunko.jp/special/202302shuichi/" target="_blank">週に一度クラスメイトを買う話</a></td></tr>
-                <tr><td><a href="https://storia.takeshobo.co.jp/manga/osakano/" target="_blank">どうしたら幼馴染の彼女になれますか！？</a></td></tr>-->
-            </table>
-            
+                </table>
+        </div>
 
+        <div class="school-timetable">
+            <h3 class="important">School timetable</h3>
+            <div class="btn-group2">
+                <p><a class="important" href="sc.html" target="_blank">
+                このボタンをぽちってね～！そしたら、あのページに行けるよんっ</a></p>
+            </div>
+        </div>
+
+        <div class="lyrics-section">
             <h3 class="important">Lyrics</h3>
-            <div class="btn-group2" style="border: none; padding: 0; background-color: transparent;">
+            <div class="btn-group2">
                 <p><a class="important" href="Lyrics.html" target="_self">天球(そら)のMúsica</a></p>
                 <p><a class="important" href="Lyrics2.html" target="_self">金系雀～カナリヤ～feat.亜季</a></p>
             </div>
