--- a/Yui/index.html
+++ b/Yui/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Weiyu / オフィシャルサイト</title>
+    <link rel="icon" href="Weiyu.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body {
