--- a/Yui/phone.html
+++ b/Yui/phone.html
@@ -283,7 +283,7 @@
     <div class="header-container">
         <div class="site-title">Weiyu｜<span style="font-size: 24px;">Official Site</span></div>
         <div class="nl">
-            <a href="About.html">Profile</a>
+            <a href="About_Mobile.html">Profile</a>
             <a href="sc.html">Schedule</a>
             <a href="Lyrics.html">Music</a>
             <a href="mailto:macadam_topspin.0d@icloud.com">Contact</a>
