--- a/Yui/About_Mobile.html
+++ b/Yui/About_Mobile.html
@@ -1,146 +1,97 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Profile / Weiyu オフィシャルサイト</title>
-	<style>
-		/* 參考自：https://www.w3schools.com & chatgpt.com */
-		body{
-			font-family: Arial, sans-serif;
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Profile / Weiyu オフィシャルサイト</title>
+    <style>
+        /* 參考自：https://www.w3schools.com & chatgpt.com */
+        body{
+            font-family: Arial, sans-serif;
             background-color: #f0f8ff;
             margin: 0;
-            padding: 20px;
+            padding: 20px; /* 基本 padding */
+            padding-top: 30px; /* 固定從頂部增加 30px 的內距 (原手機版值) */
             display: flex;
             justify-content: center;
-            align-items: center;
-            min-height: 100vh; /* 使用 min-height 確保內容足夠時可以滾動 */
+            align-items: flex-start; /* 內容從頂部開始排列，而非垂直居中 */
+            min-height: 100vh; /* 確保內容足夠時可以滾動 */
             box-sizing: border-box; /* 確保 padding 不會導致溢出 */
-		}
-		.ime{
-			display: flex;
+            overflow-y: auto; /* 確保內容超出行高時可以垂直滾動 */
+        }
+        .ime{
+            display: flex;
             flex-direction: column;
             align-items: center;
             background: white;
-            padding: 20px;
-            border-radius: 10px;
+            padding: 15px; /* 固定內距 (原手機版值) */
+            border-radius: 5px; /* 固定圓角 (原手機版值) */
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-            max-width: 800px; /* 限制最大寬度，在桌面版時不會太寬 */
+            max-width: 600px; /* 限制一個合理的最大寬度，避免在超大螢幕上過寬 */
             width: 100%; /* 讓它在小螢幕上能填滿寬度 */
-            position: relative; /* 為了 h2 和 #end 的相對定位 */
-		}
-		.cud{
-			display: flex;
-            align-items: center;
-            gap: 20px;
-            width: 100%; /* 確保子容器也佔滿 ime 的寬度 */
-            flex-wrap: wrap; /* 允許項目在小螢幕上換行 */
-            justify-content: center; /* 讓內容在換行後居中 */
-		}
-		.ct{
-			border-collapse: collapse;
+            position: relative;
+        }
+        .cud{
+            display: flex;
+            flex-direction: column; /* 固定為垂直堆疊 */
+            align-items: center; /* 內容居中 */
+            gap: 15px; /* 固定間距 */
+            width: 100%; /* 確保子容器佔滿 ime 的寬度 */
+            /* flex-wrap: wrap; 和 justify-content: center; 在 flex-direction: column 時通常不需要 */
+        }
+        .ct{
+            border-collapse: collapse;
             width: 100%; /* 表格寬度設為 100%，以適應父容器 */
-            max-width: 365px; /* 保留桌面版的大致寬度限制 */
-		}
-		.ct th, .ct td{
-			border: 1px solid #ddd;
-            padding: 10px;
+            max-width: 100%; /* 表格在任何尺寸下都佔滿寬度 */
+            font-size: 14px; /* 固定表格字體大小 */
+        }
+        .ct th, .ct td{
+            border: 1px solid #ddd;
+            padding: 8px; /* 固定表格內距 */
             text-align: left;
             word-break: break-word; /* 防止長文字溢出 */
-		}
-		.ct th{
-			background-color: #b0c4de;
-		}
-		.pic img{
-			width: 150px;
+        }
+        .ct th{
+            background-color: #b0c4de;
+        }
+        .pic img{
+            width: 100px; /* 固定圖片大小 (原手機版值) */
             height: auto;
             border-radius: 10px;
             max-width: 100%; /* 圖片確保不溢出 */
-		}
-		.btn-group a{
-			display: inline-block;
-            padding: 10px 20px;
-            font-size: 16px;
+        }
+        .btn-group a{
+            display: inline-block;
+            padding: 8px 15px; /* 固定按鈕內距 (原手機版值) */
+            font-size: 14px; /* 固定按鈕字體大小 (原手機版值) */
             color: white;
             background-color: #778899;
             text-decoration: none;
             border-radius: 5px;
             transition: background-color 0.3s;
-		}
-		.btn-group a:hover{
-			background-color: #add8e6;
-		}
-		h2 {
-            /* 移除絕對定位，改為正常的流式佈局 */
-            margin-top: 0; /* 移除預設的頂部邊距 */
-            margin-bottom: 20px; /* 在 h2 下方增加間距 */
-		 	font-size: 24px;
-		 	font-weight: bold;
+        }
+        .btn-group a:hover{
+            background-color: #add8e6;
+        }
+        h2 {
+            margin-top: 0;
+            margin-bottom: 15px; /* 固定間距 (原手機版值) */
+            font-size: 20px; /* 固定標題字體大小 (原手機版值) */
+            font-weight: bold;
             color: #696969;
-            text-align: center; /* 標題居中 */
+            text-align: center;
         }
         #end {
-            /* 移除絕對定位，改為正常的流式佈局 */
-            margin-top: 20px; /* 在上方增加間距 */
-            margin-bottom: 0; /* 移除預設的底部邊距 */
-		 	font-size: 14px;
-		 	text-align: center; /* 文字居中 */
-		 	color: #a9a9a9; /* 從 p 標籤移過來 */
-		}
-
-        /* ******************************************* */
-        /* 手機優化 (Mobile Optimization) Media Queries */
-        /* ******************************************* */
-
-        @media (max-width: 768px) { /* 當螢幕寬度小於或等於 768px 時應用 */
-            body {
-                padding: 10px; /* 調整 body 內距 */
-                height: auto; /* 移除固定高度，讓內容可以滾動 */
-                align-items: flex-start; /* 內容從頂部開始排列，而非垂直居中 */
-            }
-
-            .ime {
-                padding: 15px; /* 調整主要容器內距 */
-                border-radius: 5px;
-            }
-
-            .cud {
-                flex-direction: column; /* 圖片和表格垂直堆疊 */
-                gap: 15px; /* 調整間距 */
-            }
-
-            .ct {
-                max-width: 100%; /* 表格在手機上完全佔滿寬度 */
-                font-size: 14px; /* 表格字體縮小 */
-            }
-
-            .ct th, .ct td {
-                padding: 8px; /* 表格內距縮小 */
-            }
-
-            .pic img {
-                width: 100px; /* 圖片縮小 */
-            }
-
-            h2 {
-                font-size: 20px; /* 標題字體縮小 */
-                margin-bottom: 15px;
-            }
-
-            .btn-group a {
-                padding: 8px 15px; /* 按鈕內距縮小 */
-                font-size: 14px; /* 按鈕字體縮小 */
-            }
-
-            #end {
-                font-size: 12px; /* 頁腳文字字體縮小 */
-                margin-top: 15px;
-            }
+            margin-top: 15px; /* 固定間距 (原手機版值) */
+            margin-bottom: 0;
+            font-size: 12px; /* 固定頁腳文字字體大小 (原手機版值) */
+            text-align: center;
+            color: #a9a9a9;
         }
-	</style>
+    </style>
 </head>
 <body>
-	<div class="ime">
+    <div class="ime">
         <h2>Profile</h2>
         <div class="cud">
             <table class="ct">
@@ -172,9 +123,9 @@
             </div>
         <br>
         <div class="btn-group">
-            <a href="phone.html" target="_self">Back to list</a>
+            <a href="index.html" target="_self">Back to list</a>
         </div>
         <p id="end">当サイトの内容（文章・画像等）の無断転載、引用、再配布、二次加工、商業利用を固く禁じます。</p>
-	</div>
+    </div>
 </body>
 </html>
