--- a/Yui/About_Mobile.html
+++ b/Yui/About_Mobile.html
@@ -131,7 +131,7 @@
             </div>
         <br>
         <div class="btn-group">
-            <a href="index.html" target="_self">Back to list</a>
+            <a href="phone.html" target="_self">Back to list</a>
         </div>
     </div>
 
