--- a/Yui/About_Mobile.html
+++ b/Yui/About_Mobile.html
@@ -11,7 +11,7 @@
             background-color: #f0f8ff;
             margin: 0;
             padding: 20px; /* 基本 padding */
-            padding-top: 30px; /* 固定從頂部增加 30px 的內距 */
+            padding-top: 80px; /* **調整：從頂部增加 80px 的內距，讓整體下移更多** */
             display: flex;
             flex-direction: column; /* 讓內容垂直堆疊，包含 ime 和 footer */
             justify-content: flex-start; /* 內容從頂部開始 */
@@ -28,10 +28,10 @@
             padding: 15px; /* 固定內距 */
             border-radius: 5px; /* 固定圓角 */
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-            max-width: 600px; /* 限制一個合理的最大寬度，避免在超大螢幕上過寬 */
+            max-width: 400px; /* **調整：將最大寬度設為 400px，讓內容更窄** */
             width: 100%; /* 讓它在小螢幕上能填滿寬度 */
             position: relative;
-            margin-bottom: 20px; /* 新增：讓 ime 容器下方與版權聲明有間距 */
+            margin-bottom: 20px; /* 讓 ime 容器下方與版權聲明有間距 */
         }
         .cud{
             display: flex;
@@ -85,14 +85,13 @@
 
         /* 新增或修改 #end 的樣式 */
         #end {
-            /* 移除之前在 .ime 內部的 margin-top/bottom */
             margin-top: 0;
             margin-bottom: 20px; /* 距離頁面底部有 20px 間距 */
             font-size: 12px;
             text-align: center;
             color: #a9a9a9; /* 淺灰色 */
             width: 100%; /* 讓它佔滿寬度 */
-            max-width: 600px; /* 限制最大寬度，與 .ime 容器對齊 */
+            max-width: 400px; /* **調整：將最大寬度設為 400px，與 .ime 容器對齊** */
             padding: 0 20px; /* 左右內距，與 body 的 padding 對齊 */
             box-sizing: border-box; /* 確保 padding 不會導致溢出 */
         }
@@ -135,7 +134,7 @@
         </div>
     </div>
 
-    <p id="end" style="color: gray;">当サイトの内容（文章・画像等）の無断転載、引用、再配布、二次加工、商業利用を固く禁じます。</p>
+    <p id="end">当サイトの内容（文章・画像等）の無断転載、引用、再配布、二次加工、商業利用を固く禁じます。</p>
 
 </body>
 </html>
