--- a/Yui/index.html
+++ b/Yui/index.html
@@ -204,7 +204,7 @@
             <a href="sc.html">Schedule</a>
             <a href="Lyrics.html">Music</a>
             <a href="mailto:macadam_topspin.0d@icloud.com">Contact</a>
-            <a href="phone.html">Phone</a>
+            <a href="phone.html">Mobile</a>
         </div>
     </div>
     <img src="Weiyu.jpg" class="banner" alt="Weiyu Banner">
