--- a/Yui/About_Mobile.html
+++ b/Yui/About_Mobile.html
@@ -84,12 +84,13 @@
         }
 
         /* 新增或修改 #end 的樣式 */
-        #end {
+        
+        .end {
             margin-top: 0;
             margin-bottom: 20px; /* 距離頁面底部有 20px 間距 */
-            font-size: 12px;
+            font-size: 10px;
             text-align: center;
-            color: #a9a9a9; /* 淺灰色 */
+            color: #c0c0c0; /* 淺灰色 */
             width: 100%; /* 讓它佔滿寬度 */
             max-width: 400px; /* **調整：將最大寬度設為 400px，與 .ime 容器對齊** */
             padding: 0 20px; /* 左右內距，與 body 的 padding 對齊 */
@@ -134,7 +135,7 @@
         </div>
     </div>
 
-    <p id="end">当サイトの内容（文章・画像等）の無断転載、引用、再配布、二次加工、商業利用を固く禁じます。</p>
+    <p class="end" style="color: #c0c0c0; font-size: 12px;">当サイトの内容（文章・画像等）の無断転載、引用、再配布、二次加工、商業利用を固く禁じます。</p>
 
 </body>
 </html>
