--- a/Yui/phone.html
+++ b/Yui/phone.html
@@ -348,7 +348,7 @@
         <div class="footer">
             <p id="end">This page is still under construction.</p>
             <h5 id="wa">当サイトの内容の無断転載・引用を禁じます。</h5>
-            <p id="end">3.15: Add Page; 3.20 Fixed the link; 3.23:CSS Adjustments; 3.24:Add Page; 4.01:Add Page and Some adjustments; 5.06:Edited with Flex; 5.19:Optimizing flex; 5.25:Update something<br>Contact: macadam_topspin.0d@icloud.com</p>
+            <p id="end"><a href="log.html" target="_self">Update Log</a><br>Contact: macadam_topspin.0d@icloud.com</p>
         </div>
     </div>
 </body>
