--- a/Yui/log.html
+++ b/Yui/log.html
@@ -156,8 +156,14 @@
 
       <div class="log-entry">
         <div class="date">6.01</div>
-        <div class="version">v3.3</div>
-        <div class="desc">ページ追加と調整</div>
+        <div class="version">v4.0</div>
+        <div class="desc">ログページ追加と調整</div>
+      </div>
+
+      <div class="log-entry">
+        <div class="date">6.03</div>
+        <div class="version">v5.0</div>
+        <div class="desc">アニメページ追加と調整</div>
       </div>
     </div>
   </div>
@@ -180,7 +186,8 @@
         ['Flex を使用して再構築', 'Rebuilt with Flex'],
         ['Flex の最適化', 'Optimized Flex'],
         ['細かなアップデート', 'Minor updates'],
-        ['ページ追加と調整', 'Added pages and adjustments']
+        ['ログページ追加と調整', 'Log Page Added and adjustments']
+        ['アニメページ追加と調整', 'Anime Page Added and adjustments']
       ];
 
       isJapanese = !isJapanese;
