--- a/Yui/phone.html
+++ b/Yui/phone.html
@@ -286,6 +286,7 @@
             <a href="About_Mobile.html">Profile</a>
             <a href="sc.html">Schedule</a>
             <a href="Lyrics.html">Music</a>
+            <a href="anime.html">Anime</a>
             <a href="mailto:macadam_topspin.0d@icloud.com">Contact</a>
             <a href="index.html">PC</a>
         </div>
