--- a/Yui/phone.html
+++ b/Yui/phone.html
@@ -287,7 +287,7 @@
             <a href="sc.html">Schedule</a>
             <a href="Lyrics.html">Music</a>
             <a href="anime.html">Anime</a>
-            <a href="mailto:macadam_topspin.0d@icloud.com">Contact</a>
+            <!--<a href="mailto:macadam_topspin.0d@icloud.com">Contact</a>-->
             <a href="index.html">PC</a>
         </div>
     </div>
