--- a/Yui/anime.html
+++ b/Yui/anime.html
@@ -220,7 +220,7 @@
   <div class="section-title" id="favorite">好きな作品 / Favorite Works</div>
 
   <section class="anime-list">
-    <div class="anime-item" data-title="時々ボソッとロシア語でデレる隣のアーリャさん" data-desc="久世政近の隣の席に座るアーリャさんは、いつも彼に対して冷ややかな目線を向けている。けれど、時々ボソッとロシア語で彼にデレていて……。<br>その言葉を政近も聞き逃しはしない。なんと、政近はロシア語のリスニングがネイティブレベルだったのだ!!<br>気付いていないと思い込み、時々デレるアーリャさん。<br>そして、その意味を理解しながらも、気付いていないような振りをする政近。（引用：https://roshidere.com/story/?lang=ja）" data-img="IMG_7705.jpeg">
+    <div class="anime-item" data-title="時々ボソッとロシア語でデレる隣のアーリャさん" data-desc="久世政近の隣の席に座るアーリャさんは、いつも彼に対して冷ややかな目線を向けている。けれど、時々ボソッとロシア語で彼にデレていて……。<br>その言葉を政近も聞き逃しはしない。なんと、政近はロシア語のリスニングがネイティブレベルだったのだ!!<br>気付いていないと思い込み、時々デレるアーリャさん。<br>そして、その意味を理解しながらも、気付いていないような振りをする政近。（引用：https://roshidere.com/story/?lang=ja）" data-img="IMG_7705.jpg">
       <div class="anime-rank">時々ボソッとロシア語でデレる隣のアーリャさん<span class="anime-tag">ライトノベル・アニメ</span></div>
     </div>
     <div class="anime-item" data-title="久保さんは僕を許さない" data-desc="白石純太はクラスの中で非常に影が薄いいわゆるモブキャラクターと呼ばれる存在である。その純太はクラスメイトや担任にさえ存在を認識されないほどに影が薄いが久保渚咲は純太のことを普通に認識することができる。影が薄い純太に興味を持った渚咲が純太と関わることで徐々に純太に対して恋心を無意識に抱くようになる。本来接点のないはずの2人が渚咲の興味がきっかけで仲良くなり学校生活や私生活で行動を共にするようになるという日常を描いたラブコメディである。（引用：ウィキペディア）" data-img="IMG_2532.jpg">
