--- a/Yui/About_Mobile.html
+++ b/Yui/About_Mobile.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Profile / Weiyu オフィシャルサイト</title>
+    <link rel="icon" href="Weiyu.ico" type="image/x-icon">
     <style>
         /* 參考自：https://www.w3schools.com & chatgpt.com */
         body{
