--- a/Yui/anime.html
+++ b/Yui/anime.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>アニメ / Weiyu オフィシャルサイト</title>
+  <link rel="icon" href="icon_a.ico" type="image/x-icon">
   <style>
   	:root {
       --bg-color: #f9f9f9;
