--- a/Yui/anime.html
+++ b/Yui/anime.html
@@ -186,6 +186,11 @@
         padding: 1.5rem 1.5rem;
       }
     }
+
+    footer{
+    	padding: 0rem 2rem;
+    	color: #a9a9a9;
+    }
   </style>
 </head>
 <body>
@@ -229,7 +234,9 @@
       <div class="anime-rank">久保さんは僕を許さない<span class="anime-tag">漫画・アニメ</span></div>
     </div>
   </section>
-
+  <footer>
+    <p>Last Update: 2025.06.03</p>
+  </footer>
   <script>
     const items = document.querySelectorAll('.anime-item');
     items.forEach(item => {
