--- a/Yui/log.html
+++ b/Yui/log.html
@@ -186,7 +186,7 @@
         ['Flex を使用して再構築', 'Rebuilt with Flex'],
         ['Flex の最適化', 'Optimized Flex'],
         ['細かなアップデート', 'Minor updates'],
-        ['ログページ追加と調整', 'Log Page Added and adjustments']
+        ['ログページ追加と調整', 'Log Page Added and adjustments'],
         ['アニメページ追加と調整', 'Anime Page Added and adjustments']
       ];
 
