--- a/Yui/index.html
+++ b/Yui/index.html
@@ -262,7 +262,8 @@
             <a href="sc.html">Schedule</a>
             <a href="Lyrics.html">Music</a>
             <a href="anime.html">Anime</a>
-            <a href="mailto:macadam_topspin.0d@icloud.com">Contact</a>
+            <!--<a href="mailto:macadam_topspin.0d@icloud.com">Contact</a>-->
+            <a href="ask.html">Contact</a>
             <a href="phone.html">Mobile</a>
         </div>
     </div>
