--- a/Yui/ask.html
+++ b/Yui/ask.html
@@ -140,9 +140,8 @@
     <h1>お問い合わせ</h1>
 
     <div class="info-text">
-        ファンクラブに関するお問い合わせは<a href="#">こちら</a>よりお願いいたします。<br><br>
-        お問い合わせへの返信はご登録いただいたアドレスにメールをさせていただきます。<br>
-        迷惑メール対策等をされている場合には、「hinatazaka46.com」を許可するドメインとしてご登録ください。
+        <!--ファンクラブに関するお問い合わせは<a href="#">こちら</a>よりお願いいたします。<br><br>-->
+        迷惑メール対策等をされている場合には、当方からお送りするメールには料金請求や不審なサイトへの誘導リンク等は一切含まれておりませんので、それらが含まれていないことをご確認の上、ご返信や手続きを行ってください。
     </div>
 
     <form action="https://formsubmit.co/weiyuchen2006@gmail.com" method="POST">
