--- a/Yui/ask.html
+++ b/Yui/ask.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>お問い合わせ / Weiyu オフィシャルサイト</title>
+    <title>お問い合わせ｜Weiyu オフィシャルサイト</title>
     <style>
         body {
             font-family: 'Helvetica Neue', Arial, sans-serif;
