--- a/Yui/log.html
+++ b/Yui/log.html
@@ -165,6 +165,12 @@
         <div class="version">v5.0</div>
         <div class="desc">アニメページ追加と調整</div>
       </div>
+
+      <div class="log-entry">
+        <div class="date">6.14</div>
+        <div class="version">v6.0</div>
+        <div class="desc">フォームページを追加</div>
+      </div>
     </div>
   </div>
 
@@ -187,7 +193,8 @@
         ['Flex の最適化', 'Optimized Flex'],
         ['細かなアップデート', 'Minor updates'],
         ['ログページ追加と調整', 'Log Page Added and adjustments'],
-        ['アニメページ追加と調整', 'Anime Page Added and adjustments']
+        ['アニメページ追加と調整', 'Anime Page Added and adjustments'],
+        ['フォームページを追加', 'Form Page Added']
       ];
 
       isJapanese = !isJapanese;
