--- a/Yui/anime.html
+++ b/Yui/anime.html
@@ -224,7 +224,7 @@
     </div>
   </section>
 
-  <div class="section-title" id="favorite">好きな作品 / Favorite Works</div>
+  <div class="section-title" id="favorite">大好きな作品 / Favorite Works</div>
 
   <section class="anime-list">
     <div class="anime-item" data-title="時々ボソッとロシア語でデレる隣のアーリャさん" data-desc="久世政近の隣の席に座るアーリャさんは、いつも彼に対して冷ややかな目線を向けている。けれど、時々ボソッとロシア語で彼にデレていて……。<br>その言葉を政近も聞き逃しはしない。なんと、政近はロシア語のリスニングがネイティブレベルだったのだ!!<br>気付いていないと思い込み、時々デレるアーリャさん。<br>そして、その意味を理解しながらも、気付いていないような振りをする政近。（引用：https://roshidere.com/story/?lang=ja）" data-img="IMG_7705.jpg">
