--- a/Yui/log.html
+++ b/Yui/log.html
@@ -169,7 +169,7 @@
       <div class="log-entry">
         <div class="date">6.14</div>
         <div class="version">v6.0</div>
-        <div class="desc">フォームページを追加</div>
+        <div class="desc">フォームページを追加と調整</div>
       </div>
     </div>
   </div>
@@ -194,7 +194,7 @@
         ['細かなアップデート', 'Minor updates'],
         ['ログページ追加と調整', 'Log Page Added and adjustments'],
         ['アニメページ追加と調整', 'Anime Page Added and adjustments'],
-        ['フォームページを追加', 'Form Page Added']
+        ['フォームページを追加と調整', 'Form Page Added and adjustments']
       ];
 
       isJapanese = !isJapanese;
