--- a/Yui/log.html
+++ b/Yui/log.html
@@ -177,6 +177,12 @@
         <div class="version">v6.0.1</div>
         <div class="desc">細かなアップデート</div>
       </div>
+
+      <div class="log-entry">
+        <div class="date">7.03</div>
+        <div class="version">v6.1</div>
+        <div class="desc">フッターのデザインを調整</div>
+      </div>
     </div>
   </div>
 
@@ -201,7 +207,8 @@
         ['ログページ追加と調整', 'Log Page Added and adjustments'],
         ['アニメページ追加と調整', 'Anime Page Added and adjustments'],
         ['フォームページを追加と調整', 'Form Page Added and adjustments'],
-        ['細かなアップデート', 'Minor updates']
+        ['細かなアップデート', 'Minor updates'],
+        ['フッターのデザインを調整', 'Adjust footer design']
       ];
 
       isJapanese = !isJapanese;
