--- a/Yui/phone.html
+++ b/Yui/phone.html
@@ -294,8 +294,9 @@
 
         .footer-col.right {
           display: flex;
-          flex-direction: column;
-          gap: 6px;
+          flex-direction: row;
+          justify-content: center;
+          gap: 16px;
         }
 
         .footer-col.right .footer-link {
@@ -306,8 +307,8 @@
         }
 
         .footer-col.right .footer-link:hover {
-          color: royalblue;
-          text-decoration: underline;
+          color: lightpink;
+          text-decoration: none;
         }
 
         @media (max-width: 600px) {
