--- a/Yui/log.html
+++ b/Yui/log.html
@@ -183,6 +183,12 @@
         <div class="version">v6.1</div>
         <div class="desc">フッターのデザインを調整</div>
       </div>
+
+      <div class="log-entry">
+        <div class="date">7.05</div>
+        <div class="version">v6.1.1</div>
+        <div class="desc">モバイル版の調整</div>
+      </div>
     </div>
   </div>
 
@@ -208,7 +214,8 @@
         ['アニメページ追加と調整', 'Anime Page Added and adjustments'],
         ['フォームページを追加と調整', 'Form Page Added and adjustments'],
         ['細かなアップデート', 'Minor updates'],
-        ['フッターのデザインを調整', 'Adjust footer design']
+        ['フッターのデザインを調整', 'Adjust footer design'],
+        ['モバイル版の調整', 'Mobile version adjustment']
       ];
 
       isJapanese = !isJapanese;
