--- a/Yui/phone.html
+++ b/Yui/phone.html
@@ -403,7 +403,8 @@
           </div>
           <div class="footer-col right">
             <a href="log.html" target="_self" class="footer-link">Update Log</a>
-            <a href="mailto:macadam_topspin.0d@icloud.com" class="footer-link">Contact</a>
+            <a href="ask.html" target="_blank" class="footer-link">Contact</a>
+            <a href="mailto:macadam_topspin.0d@icloud.com" class="footer-link">Email</a>
           </div>
         </div>
 
