--- a/Yui/phone.html
+++ b/Yui/phone.html
@@ -399,7 +399,8 @@
           <div class="footer-col left">
             <strong>Weiyu オフィシャルサイト</strong><br>
             This page is still under construction.<br>
-            当サイトの内容の無断転載・引用を禁じます。
+            当サイトの内容の無断転載・引用を禁じます。<br>
+            © 2025 ゆい
           </div>
           <div class="footer-col right">
             <a href="log.html" target="_self" class="footer-link">Update Log</a>
